[gd_scene load_steps=10 format=3 uid="uid://dwrcp12mdmbfw"]

[ext_resource type="Texture2D" uid="uid://dlejsst7hvaog" path="res://Assets/Enemies/Dragon/Dragon_Sleep.png" id="1_8o32n"]
[ext_resource type="Script" path="res://Scripts/Enemies/dragon.gd" id="1_xy8da"]
[ext_resource type="Texture2D" uid="uid://bdgw36yj7kadq" path="res://Assets/Enemies/Dragon/Dragon_Attack.png" id="3_x3emp"]

[sub_resource type="Animation" id="Animation_b1ujx"]
resource_name = "Attack"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DragonSleep:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_x3emp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DragonSleep:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DragonSleep:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Animation:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.3]
}

[sub_resource type="Animation" id="Animation_udmec"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DragonSleep:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_8o32n")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DragonSleep:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DragonSleep:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Animation:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.3]
}

[sub_resource type="Animation" id="Animation_08257"]
resource_name = "Sleep"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DragonSleep:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_8o32n")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DragonSleep:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DragonSleep:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Animation:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_en8kk"]
_data = {
"Attack": SubResource("Animation_b1ujx"),
"RESET": SubResource("Animation_udmec"),
"Sleep": SubResource("Animation_08257")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tg8qb"]
size = Vector2(152, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rhp1c"]
size = Vector2(154, 8)

[node name="Dragon" type="Node2D"]
script = ExtResource("1_xy8da")

[node name="DragonSleep" type="Sprite2D" parent="."]
position = Vector2(-8, -8)
texture = ExtResource("1_8o32n")
hframes = 8

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_en8kk")
}
autoplay = "Sleep"
speed_scale = 0.3

[node name="WakeUp" type="Area2D" parent="."]
collision_layer = 10

[node name="Collision" type="CollisionShape2D" parent="WakeUp"]
position = Vector2(84, 4.5)
shape = SubResource("RectangleShape2D_tg8qb")

[node name="Sleep" type="Area2D" parent="."]
collision_layer = 8

[node name="Collision" type="CollisionShape2D" parent="Sleep"]
position = Vector2(83, -60)
shape = SubResource("RectangleShape2D_rhp1c")

[node name="Pos_Attack" type="Marker2D" parent="."]
position = Vector2(5, -6)
rotation = 0.785398
gizmo_extents = 15.0

[node name="Shoot" type="Timer" parent="."]

[connection signal="body_exited" from="WakeUp" to="." method="on_wake_up_body_exited"]
[connection signal="body_entered" from="Sleep" to="." method="on_sleep_body_entered"]
[connection signal="timeout" from="Shoot" to="." method="on_shoot_timeout"]
